fix bug in routes where delete didnt work & added populate in moves and pokemon
